# Ymir

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMPILING.md  CONTRIBUTING.md  Doxyfile  README.md  TROUBLESHOOTING.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml  ci.yaml  nightly-release.yaml  release-notes-nightly.md  release.yaml  rolling-release.yaml  screenshotter.yaml  stable-release.yaml
apps/: CMakeLists.txt
apps/bus-trace-convert/: CMakeLists.txt
apps/bus-trace-convert/src/: main.cpp
apps/ymdasm/: CMakeLists.txt
apps/ymir-dbg/src/: discovery.hpp
apps/ymir-headless/src/: config_parser.hpp
apps/ymir-libretro/: CMakeLists.txt
apps/ymir-libretro/src/: libretro.cpp
apps/ymir-sandbox/: CMakeLists.txt  README.md
apps/ymir-sandbox/res/shaders/: cs_flipbits.hlsl  shadertoolsconfig.json  test_include.hlsli
apps/ymir-sandbox/src/: d3d12_graphics_context.hpp  main.cpp  sandbox_cd_device.cpp  sandbox_cd_device_events.cpp  sandbox_cd_device_events_dummy.cpp  sandbox_cd_device_events_linux.cpp  sandbox_cd_device_events_windows.cpp  sandbox_curl.cpp  sandbox_d3d12_other.cpp  sandbox_d3d12_windows.cpp  sandbox_deadlock.cpp  sandbox_disc_info_extractor.cpp  sandbox_gpu.cpp  sandbox_host_cd.cpp  sandbox_input.cpp  sandbox_vdp1_accuracy.cpp  sandbox_vdp1_poly.cpp  sandbox_vulkan.cpp  sandboxes.hpp
apps/ymir-sdl3/: CMakeLists.txt
apps/ymir-sdl3/packaging/: CMakeLists.txt
apps/ymir-sdl3/res/: Info.plist.in  io.github.strikerx3.ymir.xml  ymir.icns
apps/ymir-sdl3/src/: main.cpp
apps/ymir-sdl3/src/app/: actions.hpp  app.cpp  app.hpp  audio_system.cpp  cmdline_opts.hpp  profile.cpp  profile.hpp  rewind_buffer.cpp  rewind_buffer.hpp  rom_manager.cpp  rom_manager.hpp  rtmidi_wrapper.hpp  settings.cpp  settings.hpp  settings_defaults.hpp  shared_context.cpp  shared_context.hpp  update_checker.cpp  update_checker.hpp
apps/ymir-sdl3/src/app/debug/: cd_drive_tracer.cpp  cd_drive_tracer.hpp  cdblock_tracer.cpp  cdblock_tracer.hpp  sh2_exec_analyst.cpp  sh2_exec_analyst.hpp  sh2_tracer.cpp  sh2_tracer.hpp  vdp_tracer.cpp  vdp_tracer.hpp  ygr_tracer.cpp  ygr_tracer.hpp
apps/ymir-sdl3/src/app/events/: emu_debug_event_factory.cpp  emu_debug_event_factory.hpp  emu_event_factory.cpp  emu_event_factory.hpp  gui_event.hpp  gui_event_factory.hpp
apps/ymir-sdl3/src/app/input/: input_action.hpp  input_context.cpp  input_context.hpp
apps/ymir-sdl3/src/app/services/: EmuContext.hpp  disc_service.cpp  discord_rpc_service.cpp  discord_rpc_service.hpp  display_service.cpp  display_service.hpp  graphics_service.cpp  graphics_service.hpp  graphics_types.hpp  input_service.cpp  midi_service.cpp  midi_service.hpp  mouse_capture_service.cpp  mouse_capture_service.hpp  rom_service.cpp  rom_service.hpp  save_state_service.cpp  save_state_service.hpp  save_state_types.hpp
apps/ymir-sdl3/src/app/ui/: window_base.cpp
apps/ymir-sdl3/src/serdes/: cereal_savestate.hpp  state_cereal.hpp
apps/ymir-sdl3/src/util/: deprecation_helpers.hpp  os_exception_handler.cpp  os_features.cpp  os_features.hpp  ring_buffer.hpp  rom_loader.cpp  rom_loader.hpp  service_locator.hpp  std_lib.cpp  std_lib.hpp  stdio_suppress.cpp  stdio_suppress.hpp
cmake/: CompileHLSL.cmake  LibretroDeps.cmake  PGO.cmake  PGOMerge.cmake  fix_freebsd_vcpkg_ninja.patch
docs/: bus-trace-roadmap.md
docs/dev-notes/: game-bugs.txt  game-quirks.txt
docs/dev-notes/finicky-games/: scu-dma.txt  smpc-timings.txt  vdp-sprite-data-mismatch.txt  vdp1-bad-commands.txt  vdp1-sensitive-video-timings.txt  vdp1-video-timings.txt  vdp2-bad-window-params.txt  vdp2-illegal-cycxn-params.txt
docs/dev-notes/system-info/: cdblock-ygr.txt  interrupts.txt  sh1-memory-map.txt  sh1-pins.txt  sh2-memory-map.txt  vdp1-erase-swap-timings.txt  vdp2-vram-access-cycles.txt
libs/ymir-core/: CMakeLists.txt
libs/ymir-core/docs/: mainpage.hpp  namespaces.hpp
libs/ymir-core/include/ymir/: version.hpp
libs/ymir-core/include/ymir/bus/: busarb.hpp
libs/ymir-core/include/ymir/core/: configuration.hpp  scheduler.hpp
libs/ymir-core/include/ymir/db/: cdb_rom_db.hpp  game_db.hpp
libs/ymir-core/include/ymir/debug/: cd_drive_tracer_base.hpp  cdblock_tracer_base.hpp  debug_break.hpp  sh2_tracer_base.hpp  vdp_tracer_base.hpp  watchpoint_defs.hpp
libs/ymir-core/include/ymir/gpu/: gpu.hpp  gpu_device_mgr.hpp  gpu_shaders.hpp
libs/ymir-core/include/ymir/media/: cd_defs.hpp  cd_device.hpp  cd_interface.hpp  cd_utils.hpp  disc.hpp  filesystem.hpp  host_cd.hpp  media_defs.hpp  saturn_header.hpp  scsi.hpp
libs/ymir-core/include/ymir/savestate/: savestate_cdblock.hpp  savestate_scu.hpp  savestate_sh2.hpp
libs/ymir-core/include/ymir/state/: state.hpp  state_cd_drive.hpp  state_cdblock.hpp  state_scu.hpp  state_sh1.hpp  state_sh2.hpp  state_smpc.hpp  state_vdp.hpp  state_ygr.hpp
libs/ymir-core/include/ymir/sys/: backup_ram.hpp  backup_ram_utils.hpp  bus.hpp  memory.hpp  saturn.hpp  system.hpp  system_features.hpp
libs/ymir-core/include/ymir/util/: bit_ops.hpp  bitmask_enum.hpp  bus_trace.hpp  dev_assert.hpp  dev_log.hpp  inline.hpp  observable.hpp  property_bag.hpp  result.hpp  virtual_memory.hpp
libs/ymir-core/res/embed/d3d11/: cs_vdp1_cpuwrite.hlsl  cs_vdp1_erase.hlsl  cs_vdp1_eraseswap.hlsl  cs_vdp1_polydraw.hlsl  cs_vdp1_polymerge.hlsl  cs_vdp1_render.hlsl  cs_vdp2_bgs.hlsl  cs_vdp2_ccwindow.hlsl  cs_vdp2_compose.hlsl  cs_vdp2_rotparams.hlsl  cs_vdp2_sprite.hlsl
libs/ymir-core/src/ymir/bus/: busarb.cpp
libs/ymir-core/src/ymir/core/: configuration.cpp
libs/ymir-core/src/ymir/db/: cdb_rom_db.cpp  game_db.cpp
libs/ymir-core/src/ymir/gpu/: gpu_device_mgr.cpp  gpu_shaders_macos.cpp  gpu_shaders_other.cpp  (+2 more)
tests/: CMakeLists.txt
tests/ymir-core-tests/: CMakeLists.txt
tests/ymir-dbg-tests/: CMakeLists.txt
tests/ymir-dbg-tests/src/: discovery_tests.cpp
tests/ymir-headless-tests/src/: config_parser_tests.cpp
vcpkg-triplets/: x64-win-llvm-avx2-lto-static-md.cmake  x64-win-llvm-avx2-static-md.cmake
vcpkg-triplets/x64-win-llvm/: x64-win-llvm-avx2.toolchain.cmake
(+322 files in other folders)
